# EuGenAI

./: .gitattributes  .gitignore  CONTRIBUTING.md  FEATURES.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  QUICKSTART.md  README.md  README_zh.md  ROADMAP.md  data_format_example.json  data_format_multi_lesion_example.json  data_format_unlabeled_example.json  data_format_weak_labels_example.json  pyproject.toml  setup.sh
configs/: default_config.yaml  multi_lesion_config.yaml  quick_test_config.yaml  reinforcement_learning_config.yaml  rtx2060_config.yaml  self_supervised_config.yaml  weak_supervised_config.yaml
data/: .gitkeep  diagnosis_labels.json  quick_test_test.json  quick_test_train.json  quick_test_val.json
demo_multi_lesion_visualizations/: README.md  多病灶可视化详细解释.md
demo_visualizations/: README.md  可视化图表解释说明.md
docs/: CLEANUP_SUMMARY.md  DATA_PREPARATION_GUIDE.md  REMOTE_TRAINING_GUIDE.md  SSL_RL_IMPLEMENTATION.md  TRAINING_COMMANDS.md  training_pipeline.md
docs/zh/: README.md  功能对比与升级指南.md  多病灶功能说明.md  实施方案总结.md
scripts/: create_quick_test_dataset.py  generate_demo_visualizations.py  generate_multi_lesion_demo.py  generate_synthetic_fundus.py  prepare_data.py  sanity_check.py  test_gpu.py  validate_data.py
src/: __init__.py  dataset.py  inference.py  model.py  multi_lesion_dataset.py  multi_lesion_model.py  multi_lesion_visualizer.py  reinforcement_learning.py  self_supervised.py  train.py  utils.py
